src/objects/Sales_Rep_Quarterly_Bonus__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Threshold__c</fullName>
        <label>GP Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Target__c</fullName>
        <label>Quarterly Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <referenceTo>Sales_Rep_Annual_Bonus__c</referenceTo>
        <relationshipLabel>Sales Rep Quarterly Bonuses</relationshipLabel>
        <relationshipName>Sales_Rep_Quarterly_Bonuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sales Rep Quarterly Bonus</label>
    <nameField>
        <displayFormat>SRQ-{0000}</displayFormat>
        <label>Sales Rep Quarter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Quarterly Bonuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>